création About + cards + sections

--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@splinetool/react-spline": "^4.0.0",
+    "@studio-freight/lenis": "^1.0.42",
+    "aos": "^2.3.4",
     "gsap": "^3.12.5",
+    "lenis": "^1.1.13",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
