--- a/package.json
+++ b/package.json
@@ -9,14 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@splinetool/react-spline": "^4.0.0",
-    "@studio-freight/lenis": "^1.0.42",
-    "aos": "^2.3.4",
-    "gsap": "^3.12.5",
-    "lenis": "^1.1.13",
+    "i18next": "^23.15.1",
     "next": "14.2.13",
+    "next-i18next": "^15.3.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-i18next": "^15.0.2",
     "react-icons": "^5.3.0",
     "sass": "^1.79.2"
   },
