--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.4.8",
     "i18next": "^23.15.1",
     "next": "14.2.13",
     "next-i18next": "^15.3.1",
